--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,5 @@
 @import "reset", "colors_fonts";
+/* TEST */
 /* --------- STYLE FOR ALL --------- */
 body {
   background-color: rgb(150, 36, 36);
