--- a/css/_about.scss
+++ b/css/_about.scss
@@ -10,7 +10,7 @@
   flex-direction: column;
   flex-wrap: nowrap;
   align-items: center;
-  background-color: orange;
+  // background-color: orange;
   // background-color: white;
 }
 .about__body {
@@ -43,7 +43,7 @@
   background-size: 350px;
   //   background-blend-mode: color-dodge;
   //   background-image: linear-gradient(#ef90a536), url(/img/lil_rose_back_02.png);
-  background-image: url("/img/lil_rose_back_02.png");
+  background-image: url("img/lil_rose_back_02.png");
   //   background-color: green;
 }
 .about__ava {
