--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,7 @@ body {
 
 .line {
   max-width: 150px;
+  padding: 0px 15px;
   height: 1px;
   flex: 1 1;
   background: #e0d9d9;
@@ -188,7 +189,7 @@ body {
   background-repeat: no-repeat;
   background-position: 50% 0px;
   background-size: 350px;
-  background-image: url("img/lil_rose_back_02.png");
+  background-image: url("/img/lil_rose_back_02.png");
 }
 
 .about__ava {
