--- a/css/_about.scss
+++ b/css/_about.scss
@@ -43,12 +43,12 @@
   background-size: 350px;
   //   background-blend-mode: color-dodge;
   //   background-image: linear-gradient(#ef90a536), url(/img/lil_rose_back_02.png);
-  background-image: url("/img/lil_rose_back.png");
+  background-image: url("../img/lil_rose_back.png");
   //   background-color: green;
 }
 .about__ava {
   // display: block;
-  border: 10px solid white;
+  border: 1px solid white;
   border-radius: 50%;
 }
 .about__text {
