--- a/css/_about.scss
+++ b/css/_about.scss
@@ -31,6 +31,7 @@
   width: 100%;
   height: auto;
   padding: 60px 0px;
+  overflow: visible;
   // display: flex;
   // flex-direction: row;
   // flex-wrap: nowrap;
