--- a/css/_contacts.scss
+++ b/css/_contacts.scss
@@ -6,7 +6,7 @@
 .contacts__row {
   width: 100%;
   margin: 30px 0px;
-  padding: 0px 15px;
+  // padding: 0px 15px;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
