--- a/css/_contacts.scss
+++ b/css/_contacts.scss
@@ -5,8 +5,7 @@
 }
 .contacts__row {
   width: 100%;
-  margin: 30px 0px;
-  // padding: 0px 15px;
+  padding: 30px 0px;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
