--- a/css/style.scss
+++ b/css/style.scss
@@ -45,7 +45,7 @@ body {
   // background-color: steelblue;
 }
 .title-body {
-  margin: 30px 0px;
+  padding-bottom: 15px;
   width: 100%;
   display: flex;
   flex-direction: row;
