--- a/css/style.css
+++ b/css/style.css
@@ -180,9 +180,10 @@ body {
 
 .main__column {
   margin: 15px;
-  max-width: 300px;
-  min-width: 260px;
+  max-width: 310px;
   padding: 30px;
+  position: relative;
+  z-index: 3;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
