--- a/css/_main.scss
+++ b/css/_main.scss
@@ -1,7 +1,7 @@
 /* --------- MAIN BEGIN --------- */
 .main {
-  //   background-color: white;
-  background-color: indigo;
+    background-color: white;
+//   background-color: indigo;
 }
 .main__row {
   width: 100%;
@@ -10,7 +10,7 @@
   flex-wrap: wrap;
   align-items: center;
   background-color: white;
-  background-color: orange;
+//   background-color: orange;
 }
 .main__column-body {
   // margin-bottom: -400px;
@@ -20,7 +20,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  background-color: olive;
+//   background-color: olive;
 }
 .main__column {
   margin: 15px;
