--- a/css/style.css
+++ b/css/style.css
@@ -151,8 +151,130 @@ body {
 
 /* --------- End Title Decor --------- */
 /* --------- STYLE FOR END --------- */
-/* --------- HEADER BEGIN --------- */
-/* --------- HEADER END --------- */
+/* --------- HEADER BEGIN--------- */
+.header {
+  padding-top: 50px;
+  border-bottom: 1px solid #e0d9d9;
+  background: linear-gradient(180deg, #fffafa 0%, #fef0f0 100%);
+}
+
+.header__row {
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap-reverse;
+  justify-content: space-between;
+  align-items: flex-start;
+  background: url("/img/Mask Lil 1m.png") 20px 0 no-repeat, url("img/header_logo_background_01.svg") left 30px no-repeat;
+}
+
+.header__left {
+  width: 100%;
+  min-width: 300px;
+  padding: 0px 15px;
+  display: flex;
+  flex: 1 1;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.header__slogan {
+  width: 100%;
+  display: flex;
+  flex: 1 1;
+}
+
+.header__left p {
+  width: 100%;
+  height: auto;
+  margin-top: 30px;
+  font-family: var(--ff-serif);
+  font-size: 40px;
+  line-height: 40px;
+  font-size: calc(24px + 14 * (100vw / 1140));
+  color: var(--clr-title);
+  text-shadow: 0px 2px 8px rgba(0, 0, 0, 0.25);
+}
+
+.header__right {
+  width: 100%;
+  height: 100%;
+  padding: 0px 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1 0;
+}
+
+.header__image {
+  display: flex;
+  max-width: 300px;
+  min-width: 280px;
+  height: auto;
+  display: flex;
+  align-items: flex-start;
+  vertical-align: bottom;
+  flex: 1 0;
+}
+
+.header__btn {
+  width: 200px;
+  height: 60px;
+  margin: 20px 0px 30px 0px;
+  display: block;
+  font-family: "Quicksand", sans-serif;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #fff;
+  background: #ef90a4;
+  box-shadow: 0 0 5px 0px rgba(0, 0, 0, 0.288);
+}
+
+@media screen and (max-width: 629px) {
+  .header__row {
+    height: auto;
+  }
+  .header__left {
+    justify-content: center;
+    align-items: center;
+    background-color: #ef90a4;
+  }
+  .header__left p {
+    color: white;
+    text-align: center;
+  }
+  .header__right {
+    justify-content: flex-start;
+    align-items: center;
+  }
+  .header__image {
+    flex: 1 1;
+  }
+}
+
+@media screen and (max-width: 629px) {
+  .header__left p {
+    color: white;
+  }
+}
+
+@media screen and (max-width: 629px) {
+  .header__btn {
+    width: 200px;
+    height: 60px;
+    margin: 20px 0px 30px 0px;
+    display: block;
+    font-family: var(--ff-text);
+    font-size: 14px;
+    text-transform: uppercase;
+    color: #ef90a4;
+    background: #fef0f0;
+  }
+}
+
+/* --------- HEADER END--------- */
 /* --------- MAIN BEGIN --------- */
 .main {
   background-color: white;
@@ -167,9 +289,13 @@ body {
   background-color: white;
 }
 
+.main__title {
+  padding-top: 30px;
+}
+
 .main__column-body {
   width: 100%;
-  padding: 30px 0px;
+  padding-bottom: 30px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
