--- a/css/style.scss
+++ b/css/style.scss
@@ -60,5 +60,5 @@ body {
   background: $--clr-border;
 }
 /* --------- End Title Decor --------- */
-/* --------- STYLE FOR END --------- */
-@import "navigation", "header", "main", "about", "contacts", "footer";
+/* --------- STYLE FOR ALL END --------- */
+@import "navigation", "header", "main", "about", "contacts", "footer", "mw570px";
