--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ body {
 }
 
 /* --------- End Title Decor --------- */
-/* --------- STYLE FOR END --------- */
+/* --------- STYLE FOR ALL END --------- */
 /* --------- HEADER BEGIN--------- */
 .header {
   padding-top: 50px;
@@ -161,23 +161,23 @@ body {
 .header__row {
   width: 100%;
   height: auto;
-  margin: 0 auto;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap-reverse;
   justify-content: space-between;
   align-items: flex-start;
-  background: url("/img/Mask Lil 1m.png") 20px 0 no-repeat, url("img/header_logo_background_01.svg") left 30px no-repeat;
+  background: url("../img/lil_header_m.png") 20px 0 no-repeat, url("../img/header_logo_background_01.svg") left 30px no-repeat;
 }
 
 .header__left {
   width: 100%;
-  min-width: 300px;
+  min-width: 280px;
   padding: 0px 15px;
   display: flex;
   flex: 1 1;
   flex-direction: column;
   justify-content: flex-end;
+  background: brown;
 }
 
 .header__slogan {
@@ -200,23 +200,26 @@ body {
 
 .header__right {
   width: 100%;
-  height: 100%;
   padding: 0px 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
   flex: 1 0;
+  background: cyan;
 }
 
 .header__image {
-  display: flex;
   max-width: 300px;
-  min-width: 280px;
   height: auto;
   display: flex;
-  align-items: flex-start;
-  vertical-align: bottom;
-  flex: 1 0;
+  align-items: flex-end;
+  flex: 1 1;
+}
+
+.header__img {
+  display: flex;
+  width: 100%;
+  height: auto;
 }
 
 .header__btn {
@@ -230,48 +233,6 @@ body {
   color: #fff;
   background: #ef90a4;
   box-shadow: 0 0 5px 0px rgba(0, 0, 0, 0.288);
-}
-
-@media screen and (max-width: 629px) {
-  .header__row {
-    height: auto;
-  }
-  .header__left {
-    justify-content: center;
-    align-items: center;
-    background-color: #ef90a4;
-  }
-  .header__left p {
-    color: white;
-    text-align: center;
-  }
-  .header__right {
-    justify-content: flex-start;
-    align-items: center;
-  }
-  .header__image {
-    flex: 1 1;
-  }
-}
-
-@media screen and (max-width: 629px) {
-  .header__left p {
-    color: white;
-  }
-}
-
-@media screen and (max-width: 629px) {
-  .header__btn {
-    width: 200px;
-    height: 60px;
-    margin: 20px 0px 30px 0px;
-    display: block;
-    font-family: var(--ff-text);
-    font-size: 14px;
-    text-transform: uppercase;
-    color: #ef90a4;
-    background: #fef0f0;
-  }
 }
 
 /* --------- HEADER END--------- */
@@ -601,3 +562,5 @@ body {
 }
 
 /* --------- FOOTER END --------- */
+/* --------- MAX-WIDTH 570px BEGIN --------- */
+/* --------- MAX-WIDTH 570px BEGIN --------- */
