--- a/css/_about.scss
+++ b/css/_about.scss
@@ -55,12 +55,12 @@
   padding: 15px 15px;
   line-height: 30px;
   max-width: 600px;
+  @extend %--ft-text;
   text-align: center;
 }
 .about__name {
   padding: 30px 0px;
-  font-family: $--ff-cursive;
-  font-size: 30px;
   text-align: center;
+  @extend %--ft-cursuve;
 }
 /* --------- ABOUT END --------- */
