--- a/css/_navigation.scss
+++ b/css/_navigation.scss
@@ -1,7 +1,100 @@
-// .nav {
-//   position: fixed;
-//   border-bottom: 1px solid $--clr-border;
-//   // background: white;
-//   z-index: 999;
-//   background: cyan;
-// }
+/* --------- NAVIGATION BEGIN ---------*/
+.nav {
+  position: fixed;
+  border-bottom: 1px solid $--clr-border;
+  background: white;
+  // z-index: 999;
+  // background: cyan;
+}
+.nav__row {
+  // width: 100%;
+  padding: 0px 15px;
+  height: 50px;
+  margin: 0 auto;
+  position: relative;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  // align-items: center;
+}
+.nav__logo {
+  order: 1;
+  // background: darkcyan;
+}
+.nav-toggle {
+  display: none;
+  order: 1;
+}
+.nav-toggle-lable {
+  display: none;
+  order: 1;
+}
+.hamburger {
+//   display: none;
+}
+.nav__links {
+  // width: 100%;
+  // height: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  float: right;
+  order: 2;
+  // background: darkmagenta;
+}
+.nav__links li {
+  display: inline-block;
+}
+.nav__links a {
+  margin: 0px 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  position: relative;
+  font-family: var(--ff-menu);
+  font-size: 14px;
+  // line-height: 44px;
+  text-transform: uppercase;
+  color: #7e7e7e;
+  text-decoration: none;
+  text-align: center;
+  transition: all 0.8s ease 0s;
+  // background: palegreen;
+}
+.nav__links a:hover {
+  color: #ef90a4;
+  // border-bottom: 1px solid #7e7e7e;
+}
+.nav__links a:active {
+  color: #ef90a4;
+  // border-bottom: 1px solid #7e7e7e;
+}
+.nav__links a::before {
+  content: "";
+  display: block;
+  // width: 1em;
+  height: 1px;
+  background: var(--clr-border);
+  position: absolute;
+  top: 1;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transform: scale(0, 1);
+  transition: transform ease-in-out 250ms;
+}
+.nav__links a:hover::before {
+  transform: scale(1, 1);
+}
+.nav__social-ul {
+  display: none;
+}
+.nav__cart-out {
+  padding-top: 0px;
+  display: none;
+  align-items: center;
+  text-align: center;
+  order: 3;
+}
+/* --------- NAVIGATION END ---------*/
