--- a/css/_navigation.scss
+++ b/css/_navigation.scss
@@ -3,7 +3,7 @@
   position: fixed;
   border-bottom: 1px solid $--clr-border;
   background: white;
-  // z-index: 999;
+  z-index: 9;
   // background: cyan;
 }
 .nav__row {
