--- a/css/_hamburger.scss
+++ b/css/_hamburger.scss
@@ -1,139 +1,143 @@
+.nav__burger {
+display: flex;
+}
 .nav-toggle {
-  display: block;
-  position: absolute;
-  top: 0rem;
-  left: 0px;
-  width: 50px;
-  height: 50px;
+  display: flex;
+//   position: relative;
+//   top: 0rem;
+//   left: 0px;
+//   width: 50px;
+//   height: 50px;
   z-index: 3;
 //   z-index: 2;
-  opacity: 0;
+  opacity: 0.2;
   cursor: pointer;
 }
 
-.hamburger {
-  // display: block;
-  position: absolute;
-  top: 12px;
-  left: 15px;
-  width: 25px;
-  height: 25px;
-  z-index: 2;
-//   z-index: 3;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  // border-radius: 50%;
-//   background: #111;
-}
+// .hamburger {
+//   // display: block;
+// //   margin-right: 15px;
+//   position: absolute;
+// //   top: 12px;
+// //   left: 15px;
+// //   width: 25px;
+// //   height: 25px;
+//   z-index: 2;
+// //   z-index: 3;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   // border-radius: 50%;
+// //   background: #111;
+// }
 
-.hamburger > div {
-  position: absolute;
-  width: 25px;
-  height: 2px;
-  border-radius: 1.5px;
-  background-color: #777777;
-  transition: 0.4s;
-}
+// .hamburger > div {
+//   position: absolute;
+//   width: 25px;
+//   height: 2px;
+//   border-radius: 1.5px;
+//   background-color: #777777;
+//   transition: 0.4s;
+// }
 
-.hamburger > div:before {
-  content: "";
-  position: absolute;
-  width: 25px;
-  height: 2px;
-  border-radius: 1.5px;
-  background-color: #777777;
-  top: -10px;
-  left: 0;
-  transition: 0.4s;
-}
+// .hamburger > div:before {
+//   content: "";
+//   position: absolute;
+//   width: 25px;
+//   height: 2px;
+//   border-radius: 1.5px;
+//   background-color: #777777;
+//   top: -10px;
+//   left: 0;
+//   transition: 0.4s;
+// }
 
-.hamburger > div:after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  border-radius: 1.5px;
-  background-color: #777777;
-  top: 10px;
-  left: 0;
-  transition: 0.4s;
-}
+// .hamburger > div:after {
+//   content: "";
+//   position: absolute;
+//   width: 100%;
+//   height: 2px;
+//   border-radius: 1.5px;
+//   background-color: #777777;
+//   top: 10px;
+//   left: 0;
+//   transition: 0.4s;
+// }
 
-.nav-toggle:checked + .hamburger > div {
-  transform: rotate(135deg);
-}
+// .nav-toggle:checked + .hamburger > div {
+//   transform: rotate(135deg);
+// }
 
-.nav-toggle:checked:hover + .hamburger > div {
-  transform: rotate(225deg);
-}
+// .nav-toggle:checked:hover + .hamburger > div {
+//   transform: rotate(225deg);
+// }
 
-.nav-toggle:checked + .hamburger > div:before,
-.nav-toggle:checked + .hamburger > div:after {
-  top: 0;
-  transform: rotate(90deg);
-}
+// .nav-toggle:checked + .hamburger > div:before,
+// .nav-toggle:checked + .hamburger > div:after {
+//   top: 0;
+//   transform: rotate(90deg);
+// }
 
-.menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  visibility: hidden;
-  transition: 0.6s;
-}
+// .menu {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   visibility: hidden;
+//   transition: 0.6s;
+// }
 
-.menu > div {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-150%) translateY(-50%);
-  width: 1600px;
-  height: 1600px;
-  border-radius: 50%;
-  background-color: rgba(0, 0, 0, 0.9);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  transition: 0.6s;
-}
+// .menu > div {
+//   position: absolute;
+//   top: 50%;
+//   left: 50%;
+//   transform: translateX(-150%) translateY(-50%);
+//   width: 1600px;
+//   height: 1600px;
+//   border-radius: 50%;
+//   background-color: rgba(0, 0, 0, 0.9);
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   text-align: center;
+//   transition: 0.6s;
+// }
 
-.menu > div > div {
-  max-width: 90vw;
-  max-height: 100vh;
-  opacity: 0;
-  transition: 0.6s;
-}
+// .menu > div > div {
+//   max-width: 90vw;
+//   max-height: 100vh;
+//   opacity: 0;
+//   transition: 0.6s;
+// }
 
-.menu > div > div > ul > li {
-  list-style: none;
-}
+// .menu > div > div > ul > li {
+//   list-style: none;
+// }
 
-.menu > div > div > ul > li > a {
-  text-decoration: none;
-  color: #fff;
-  font-weight: 550;
-  text-transform: uppercase;
-  margin: 0.5rem;
-  transition: 0.3s;
-  font-size: 1.2rem;
-  display: inline-block;
-}
+// .menu > div > div > ul > li > a {
+//   text-decoration: none;
+//   color: #fff;
+//   font-weight: 550;
+//   text-transform: uppercase;
+//   margin: 0.5rem;
+//   transition: 0.3s;
+//   font-size: 1.2rem;
+//   display: inline-block;
+// }
 
-.menu > div > div > ul > li > a:hover {
-  color: #fff44f;
-}
+// .menu > div > div > ul > li > a:hover {
+//   color: #fff44f;
+// }
 
-.toggler:checked ~ .menu {
-  visibility: visible;
-}
+// .toggler:checked ~ .menu {
+//   visibility: visible;
+// }
 
-.toggler:checked ~ .menu > div {
-  transform: translateX(-50%) translateY(-50%);
-}
+// .toggler:checked ~ .menu > div {
+//   transform: translateX(-50%) translateY(-50%);
+// }
 
-.toggler:checked ~ .menu > div > div {
-  opacity: 1;
-}
+// .toggler:checked ~ .menu > div > div {
+//   opacity: 1;
+// }
