--- a/css/_navigation.scss
+++ b/css/_navigation.scss
@@ -3,14 +3,14 @@
   position: fixed;
   border-bottom: 1px solid $--clr-border;
   background: white;
-  z-index: 9;
+  // z-index: 999;
   // background: cyan;
 }
 .nav__row {
-  // width: 100%;
+  width: 100%;
   padding: 0px 15px;
   height: 50px;
-  margin: 0 auto;
+  // margin: 0 auto;
   position: relative;
   display: flex;
   flex-wrap: nowrap;
@@ -18,20 +18,104 @@
   align-items: center;
   // align-items: center;
 }
+// .nav-toggle-lable {
+//   display: none;
+//   order: 1;
+// }
+/* --------- HAMBURGER BEGIN --------- */
+.nav__burger {
+  width: 30px;
+  height: 48px;
+  position: relative;
+  display: flex;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  order: 2;
+  // background-color: red;
+}
+.nav-toggle {
+  // width: 100%;
+  // height: 100%;
+  width: 30px;
+  height: 48px;
+  position: absolute;
+  opacity: 0;
+  z-index: 3;
+  cursor: pointer;
+  order: 2;
+  display: none;
+}
+.hamburger {
+  display: none;
+  // width: 100%;
+  // height: 100%;
+  width: 30px;
+  height: 48px;
+  position: relative;
+  // top:0px;
+  // left: 0px;
+  z-index: 2;
+  // display: flex;
+  // display: none;
+  align-items: center;
+  justify-content: center;
+  order: 2;
+  // background-color: green;
+}
+.hamburger > div {
+  // display: none;
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  // border-radius: 1.5px;
+  background-color: #777777;
+  transition: 0.4s;
+}
+
+.hamburger > div:before {
+  content: "";
+  // display: none;
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  border-radius: 1.5px;
+  background-color: #777777;
+  top: -8px;
+  left: 0;
+  transition: 0.4s;
+}
+
+.hamburger > div:after {
+  content: "";
+  // display: none;
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  border-radius: 1.5px;
+  background-color: #777777;
+  top: 8px;
+  left: 0;
+  transition: 0.4s;
+}
+
+.nav-toggle:checked + .hamburger > div {
+  transform: rotate(135deg);
+}
+
+.nav-toggle:checked:hover + .hamburger > div {
+  transform: rotate(225deg);
+}
+
+.nav-toggle:checked + .hamburger > div:before,
+.nav-toggle:checked + .hamburger > div:after {
+  top: 0;
+  transform: rotate(90deg);
+}
+/* --------- HAMBURGER END --------- */
 .nav__logo {
   order: 1;
   // background: darkcyan;
-}
-.nav-toggle {
-  display: none;
-  order: 1;
-}
-.nav-toggle-lable {
-  display: none;
-  order: 1;
-}
-.hamburger {
-//   display: none;
 }
 .nav__links {
   // width: 100%;
@@ -41,7 +125,7 @@
   flex-wrap: nowrap;
   align-items: center;
   float: right;
-  order: 2;
+  order: 3;
   // background: darkmagenta;
 }
 .nav__links li {
@@ -52,30 +136,26 @@
   padding-top: 10px;
   padding-bottom: 10px;
   position: relative;
-  font-family: var(--ff-menu);
-  font-size: 14px;
-  // line-height: 44px;
-  text-transform: uppercase;
-  color: #7e7e7e;
-  text-decoration: none;
+  @extend %--ff-menu;
+  // line-height: 100%;
   text-align: center;
-  transition: all 0.8s ease 0s;
+  transition: scale 0.8s ease 0s;
   // background: palegreen;
 }
 .nav__links a:hover {
-  color: #ef90a4;
+  color: $--clr-pink;
   // border-bottom: 1px solid #7e7e7e;
 }
 .nav__links a:active {
-  color: #ef90a4;
+  color: $--clr-pink;
   // border-bottom: 1px solid #7e7e7e;
 }
 .nav__links a::before {
   content: "";
   display: block;
-  // width: 1em;
+  width: 100%;
   height: 1px;
-  background: var(--clr-border);
+  background: $--clr-border;
   position: absolute;
   top: 1;
   left: 0;
@@ -89,6 +169,7 @@
 }
 .nav__social-ul {
   display: none;
+  @extend %--ff-menu;
 }
 .nav__cart-out {
   padding-top: 0px;
