--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,14 @@ h6 {
 }
 
 /* --------- FONT FACE END --------- */
+.nav__links a, .nav__social-ul {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #7e7e7e;
+  text-decoration: none;
+}
+
 .header__left h1 {
   font-family: "Playfair Display";
   font-size: 30px;
@@ -239,13 +247,12 @@ body {
   position: fixed;
   border-bottom: 1px solid #e0d9d9;
   background: white;
-  z-index: 9;
 }
 
 .nav__row {
+  width: 100%;
   padding: 0px 15px;
   height: 50px;
-  margin: 0 auto;
   position: relative;
   display: flex;
   flex-wrap: nowrap;
@@ -253,17 +260,88 @@ body {
   align-items: center;
 }
 
-.nav__logo {
-  order: 1;
+/* --------- HAMBURGER BEGIN --------- */
+.nav__burger {
+  width: 30px;
+  height: 48px;
+  position: relative;
+  display: flex;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  order: 2;
 }
 
 .nav-toggle {
+  width: 30px;
+  height: 48px;
+  position: absolute;
+  opacity: 0;
+  z-index: 3;
+  cursor: pointer;
+  order: 2;
   display: none;
-  order: 1;
 }
 
-.nav-toggle-lable {
+.hamburger {
   display: none;
+  width: 30px;
+  height: 48px;
+  position: relative;
+  z-index: 2;
+  align-items: center;
+  justify-content: center;
+  order: 2;
+}
+
+.hamburger > div {
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background-color: #777777;
+  transition: 0.4s;
+}
+
+.hamburger > div:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  border-radius: 1.5px;
+  background-color: #777777;
+  top: -8px;
+  left: 0;
+  transition: 0.4s;
+}
+
+.hamburger > div:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  border-radius: 1.5px;
+  background-color: #777777;
+  top: 8px;
+  left: 0;
+  transition: 0.4s;
+}
+
+.nav-toggle:checked + .hamburger > div {
+  transform: rotate(135deg);
+}
+
+.nav-toggle:checked:hover + .hamburger > div {
+  transform: rotate(225deg);
+}
+
+.nav-toggle:checked + .hamburger > div:before,
+.nav-toggle:checked + .hamburger > div:after {
+  top: 0;
+  transform: rotate(90deg);
+}
+
+/* --------- HAMBURGER END --------- */
+.nav__logo {
   order: 1;
 }
 
@@ -273,7 +351,7 @@ body {
   flex-wrap: nowrap;
   align-items: center;
   float: right;
-  order: 2;
+  order: 3;
 }
 
 .nav__links li {
@@ -285,13 +363,8 @@ body {
   padding-top: 10px;
   padding-bottom: 10px;
   position: relative;
-  font-family: var(--ff-menu);
-  font-size: 14px;
-  text-transform: uppercase;
-  color: #7e7e7e;
-  text-decoration: none;
   text-align: center;
-  transition: all 0.8s ease 0s;
+  transition: scale 0.8s ease 0s;
 }
 
 .nav__links a:hover {
@@ -305,8 +378,9 @@ body {
 .nav__links a::before {
   content: "";
   display: block;
+  width: 100%;
   height: 1px;
-  background: var(--clr-border);
+  background: #e0d9d9;
   position: absolute;
   top: 1;
   left: 0;
@@ -342,124 +416,19 @@ body {
     width: 100%;
     padding: 0px 20px;
   }
+  .nav__burger {
+    display: flex;
+    order: 1;
+  }
   .nav-toggle {
-    display: block;
-    position: absolute;
-    top: 0rem;
-    left: 0px;
-    width: 50px;
-    height: 50px;
-    z-index: 3;
-    opacity: 0;
-    cursor: pointer;
+    display: flex;
+    order: 1;
   }
   .hamburger {
-    position: absolute;
-    top: 12px;
-    left: 15px;
-    width: 25px;
-    height: 25px;
-    z-index: 2;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    order: 1;
   }
-  .hamburger > div {
-    position: absolute;
-    width: 25px;
-    height: 2px;
-    border-radius: 1.5px;
-    background-color: #777777;
-    transition: 0.4s;
-  }
-  .hamburger > div:before {
-    content: "";
-    position: absolute;
-    width: 25px;
-    height: 2px;
-    border-radius: 1.5px;
-    background-color: #777777;
-    top: -10px;
-    left: 0;
-    transition: 0.4s;
-  }
-  .hamburger > div:after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    border-radius: 1.5px;
-    background-color: #777777;
-    top: 10px;
-    left: 0;
-    transition: 0.4s;
-  }
-  .nav-toggle:checked + .hamburger > div {
-    transform: rotate(135deg);
-  }
-  .nav-toggle:checked:hover + .hamburger > div {
-    transform: rotate(225deg);
-  }
-  .nav-toggle:checked + .hamburger > div:before,
-  .nav-toggle:checked + .hamburger > div:after {
-    top: 0;
-    transform: rotate(90deg);
-  }
-  .menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    visibility: hidden;
-    transition: 0.6s;
-  }
-  .menu > div {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-150%) translateY(-50%);
-    width: 1600px;
-    height: 1600px;
-    border-radius: 50%;
-    background-color: rgba(0, 0, 0, 0.9);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    transition: 0.6s;
-  }
-  .menu > div > div {
-    max-width: 90vw;
-    max-height: 100vh;
-    opacity: 0;
-    transition: 0.6s;
-  }
-  .menu > div > div > ul > li {
-    list-style: none;
-  }
-  .menu > div > div > ul > li > a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: 550;
-    text-transform: uppercase;
-    margin: 0.5rem;
-    transition: 0.3s;
-    font-size: 1.2rem;
-    display: inline-block;
-  }
-  .menu > div > div > ul > li > a:hover {
-    color: #fff44f;
-  }
-  .toggler:checked ~ .menu {
-    visibility: visible;
-  }
-  .toggler:checked ~ .menu > div {
-    transform: translateX(-50%) translateY(-50%);
-  }
-  .toggler:checked ~ .menu > div > div {
-    opacity: 1;
-  }
+  /* --------- LINKS BEGIN --------- */
   .nav__links,
   .nav__links .nav__links-ul,
   .nav__links .nav__social-ul,
@@ -478,7 +447,7 @@ body {
     transform: scale(1, 0);
     transform-origin: top;
     transition: transform 400ms ease-in-out;
-    border-bottom: 1px solid var(--clr-border);
+    border-bottom: 1px solid #e0d9d9;
   }
   .nav__links-ul {
     width: 100%;
@@ -502,15 +471,9 @@ body {
     height: 80vh;
     transform: scale(1, 0);
   }
-  .nav-toggle-lable {
-    display: flex;
-    align-items: center;
-    font-size: 22px;
-    order: 1;
-  }
   .nav__links .nav__links-ul a {
     width: 100%;
-    border-bottom: 1px solid var(--clr-border);
+    border-bottom: 1px solid #e0d9d9;
     opacity: 0;
     transition: opacity 1s ease-in-out;
     transition-delay: 0.25s;
@@ -534,7 +497,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    font-family: var(--ff-menu);
+    font-family: "Roboto Condensed", sans-serif;
     font-size: small;
     font-weight: 500;
     line-height: 40px;
@@ -560,6 +523,7 @@ body {
   }
 }
 
+/* --------- LINKS END --------- */
 /* --------- MV800PX END --------- */
 /* --------- HEADER BEGIN--------- */
 .header {
@@ -670,8 +634,6 @@ body {
   margin: 15px;
   max-width: 310px;
   padding: 30px;
-  position: relative;
-  z-index: 3;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -774,13 +736,6 @@ body {
 
 .column__btn-003 {
   background-color: #ca9868;
-}
-
-.main__grey {
-  width: 100%;
-  height: 300px;
-  position: absolute;
-  background: #ebebeb;
 }
 
 .column__btn a:hover {
