add java script menu (Kristine try to say bue)

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -2,7 +2,7 @@
 .header {
   padding-top: 50px;
   border-bottom: 1px solid #e0d9d9;
-  background: linear-gradient(180deg, #fffafa 0%, $--clr-pink-soft 100%);
+  background: linear-gradient(180deg, #fffafa 0%, $--clr-pink-soft 100%), url("../img/liliya6_1.jpg") 0 0/ cover no-repeat;
 }
 .header__row {
   width: 100%;
