--- a/css/_mw570px.scss
+++ b/css/_mw570px.scss
@@ -31,8 +31,8 @@
     font-family: var(--ff-text);
     font-size: 14px;
     text-transform: uppercase;
-    color: $--clr-pink;
-    background: #fef0f0;
+    color: #945151;
+    background: #fff;
   }
 }
 
