--- a/css/style.css
+++ b/css/style.css
@@ -212,7 +212,7 @@ body {
 .container {
   width: 100%;
   height: auto;
-  max-width: 1280px;
+  max-width: 1140px;
   margin: 0 auto;
 }
 
@@ -224,7 +224,6 @@ body {
 }
 
 .title-body {
-  padding-bottom: 15px;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -529,7 +528,7 @@ body {
 .header {
   padding-top: 50px;
   border-bottom: 1px solid #e0d9d9;
-  background: linear-gradient(180deg, #fffafa 0%, #fef0f0 100%);
+  background: linear-gradient(180deg, #fffafa 0%, #fef0f0 100%), url("../img/liliya6_1.jpg") 0 0/cover no-repeat;
 }
 
 .header__row {
@@ -932,8 +931,8 @@ body {
     font-family: var(--ff-text);
     font-size: 14px;
     text-transform: uppercase;
-    color: #ef90a4;
-    background: #fef0f0;
+    color: #945151;
+    background: #fff;
   }
 }
 
